--- a/stable/devel/google-breakpad/PKGBUILD
+++ b/stable/devel/google-breakpad/PKGBUILD
@@ -44,5 +44,8 @@ package() {
   make DESTDIR="$pkgdir" install
   install -dm755 "${pkgdir}/usr/local/include/breakpad/client/linux/dump_writer_common/"
   install -Dm644 src/client/linux/dump_writer_common/*.h "${pkgdir}/usr/local/include/breakpad/client/linux/dump_writer_common/"
+  install -Dm644 src/client/minidump_file_writer.h "${pkgdir}/usr/local/include/breakpad/client/"
+  
+  # licences
   install -Dm644 LICENSE "${pkgdir}/usr/share/licenses/$pkgname/LICENSE"
 }
