Change install dir to /usr/local

--- a/stable/computer-vision/mvs-texturing/PKGBUILD
+++ b/stable/computer-vision/mvs-texturing/PKGBUILD
@@ -42,7 +42,7 @@ build() {
 
     mkdir build
     cd build
-    cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX:PATH=/opt/sfm ..
+    cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX:PATH=/usr/local ..
     make
 
 }
