--- a/stable/computer-vision/pmvs/PKGBUILD
+++ b/stable/computer-vision/pmvs/PKGBUILD
@@ -10,7 +10,7 @@ arch=('x86_64')
 url="http://www.di.ens.fr/cmvs/"
 license=('GPL')
 depends=('libjpeg-turbo' 'gsl' 'boost')
-makedepends=('git' 'boost' 'lapack' 'cmake')
+makedepends=('git' 'boost' 'lapack' 'cmake' 'gsl-devel')
 #conflicts=('')
 #provides=('')
 groups=('computer-vision' 'sfm')
@@ -31,9 +31,9 @@ prepare() {
 
 
 pkgver() {
-  cd "$srcdir/$pkgname"
-  # Use the tag of the last commit
-  git describe --long | sed -E 's/([^-]*-g)/r\1/;s/-/./g'
+    cd "$srcdir/$pkgname"
+    # Use the tag of the last commit
+    git describe --long | sed -r 's/([^-]*-g)/r\1/;s/-/./g'
 }
 
 
