PKGBUILD:modify - add gsl-nuxsfm-devel dep. for packagin

--- a/stable/computer-vision/pmvs/PKGBUILD
+++ b/stable/computer-vision/pmvs/PKGBUILD
@@ -9,8 +9,8 @@ pkgdesc="Many multi-view stereo (MVS) algorithms do not scale well to a large nu
 arch=('x86_64')
 url="http://www.di.ens.fr/cmvs/"
 license=('GPL')
-depends=('libjpeg-turbo' 'gsl' 'boost')
-makedepends=('git' 'boost' 'lapack' 'cmake' 'gsl-devel')
+depends=('libjpeg-turbo' 'gsl-nuxsfm' 'boost')
+makedepends=('git' 'boost' 'lapack' 'cmake' 'gsl-nuxsfm-devel')
 #conflicts=('')
 #provides=('')
 groups=('computer-vision' 'sfm')
