--- a/stable/computer-vision/libsiftgpu/PKGBUILD
+++ b/stable/computer-vision/libsiftgpu/PKGBUILD
@@ -28,6 +28,7 @@ install=libsiftgpu.install
 
 package_libsiftgpu-CUDA() {
 	provides=(libsiftgpu sift)
+	conflicts=(libsiftgpu sift)
 	replaces=(libsiftgpu sift)
 	depends=( 'glew' 'freeglut' 'devil' 'cuda')
 	options=('strip')
@@ -57,6 +58,7 @@ package_libsiftgpu-CUDA() {
 package_libsiftgpu-MESA() {
 	depends=('glew' 'freeglut' 'devil')
 	provides=(libsiftgpu sift)
+	conflicts=(libsiftgpu sift)
 	replaces=(libsiftgpu sift)
 	options=('strip')
 	#build
