--- a/stable/computer-vision/libsiftgpu/makefile.noncuda
+++ b/stable/computer-vision/libsiftgpu/makefile.noncuda
@@ -8,13 +8,13 @@ siftgpu_enable_opencl = 0
 #------------------------------------------------------------------------------------------------
 # enable CUDA-based SiftGPU?
 simple_find_cuda = $(shell locate libcudart.so)
-ifneq ($(simple_find_cuda), )
- 	siftgpu_enable_cuda = 1
-else
+#ifneq ($(simple_find_cuda), )
+# 	siftgpu_enable_cuda = 1
+#else
 	siftgpu_enable_cuda = 0
-endif
+#endif
 
-CUDA_INSTALL_PATH = /usr/local/cuda
+#CUDA_INSTALL_PATH = /usr/local/cuda
 #change  additional  settings, like SM version here if it is not 1.0 (eg. -arch sm_13 for GTX280)
 #siftgpu_cuda_options = -Xopencc -OPT:unroll_size=200000
 #siftgpu_cuda_options = -arch sm_10
