gsl:PKGBUILD - add --mandir=/usr/local/share in configure to avoid conflict as pacman is unable to follow symlink

--- a/stable/scientifics/gsl/PKGBUILD
+++ b/stable/scientifics/gsl/PKGBUILD
@@ -21,10 +21,9 @@ build() {
     unset LDFLAGS
 
     cd "${srcdir}/${pkgbase}-${pkgver}"
-    ./configure --prefix=/usr/local
+    ./configure --prefix=/usr/local --mandir=/usr/local/share
     make
 }
-
 
 package_gsl-nuxsfm() {
     provides=('gsl')
