UPD progress only OpenMVS is missing

--- a/stable/computer-vision/vsfm/PKGBUILD
+++ b/stable/computer-vision/vsfm/PKGBUILD
@@ -11,8 +11,8 @@ arch=('x86_64')
 url='http://ccwu.me/vsfm/'
 license=('auhtor')
 groups=('sfm' 'computer-vision')
-depends=('gsl' 'freeglut' 'pmvs2' 'pba' 'libsiftgpu' 'blas' 'boost' 'gtk2' 'imagemagick' 'gdk-pixbuf2' 'glew' 'boost' 'xorg-server' 'cuda' 'nvidia-libgl')
-makedepends=('gcc' 'make' 'boost' 'lapack' 'automake' 'autoconf' 'gtk2' 'glew' 'devil' 'imagemagick' 'gsl' 'gdk-pixbuf2' 'gtk2' 'cuda' 'nvidia-libgl')
+depends=('gsl' 'freeglut' 'pmvs2' 'pba' 'libsiftgpu' 'blas' 'boost' 'gtk2' 'imagemagick' 'gdk-pixbuf2' 'glew' 'boost' 'xorg-server' 'cuda' 'mesa-libgl')
+makedepends=('gcc' 'make' 'boost' 'lapack' 'automake' 'autoconf' 'gtk2' 'glew' 'devil' 'imagemagick' 'gsl' 'gdk-pixbuf2' 'gtk2' 'cuda' 'mesa-libgl')
 provides=('VisualSFM')
 conflicts=('VisualSFM')
 replaces=('VisualSFM')
