--- a/stable/scientifics/ceres-solver/PKGBUILD
+++ b/stable/scientifics/ceres-solver/PKGBUILD
@@ -4,7 +4,7 @@
 
 pkgbase=('ceres-solver')
 pkgname=('ceres-solver')
-pkgver=1.11.0.r4.g7efc92d
+pkgver=1.12.0.r1.gd55fa69
 pkgrel=1
 pkgdesc="Ceres Solver [1] is an open source C++ library for modeling and solving large, complicated optimization problems."
 arch=('x86_64')
